# Jumper

./: README.md  package-lock.json  package.json  vite.config.ts
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: publish.yml
py/: __main__.py
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/@types/: action.ts  system.ts  user.ts  utils.ts
src/assets/: index.css
src/components/: LoginPage.vue  UpdaterPage.vue
src/components/@materials/form/: CheckboxField.vue  InputField.vue  SelectField.vue  TagsField.vue  TagsInput.vue  TextareaField.vue  index.ts  useItems.ts
src/components/@materials/form/Button/: OrderByButton.vue  index.ts
src/components/@materials/form/Field/: Field.vue  FieldTooltip.vue  index.ts
src/components/@materials/form/Input/: AfterInput.vue  AutoComplete.vue  BeforeInput.vue  Input.vue  index.ts
src/components/@materials/form/Select/: MultiSelect.vue  Select.vue  index.ts
src/components/@materials/form/Switch/: SquareSwitch.vue  index.ts
src/components/@materials/form/Tags/: Tags.vue  index.ts
src/components/@materials/form/Textarea/: Textarea.vue  index.ts
src/components/@materials/ui/switch/: MiniSwitch.vue
src/components/BackOfficePage/AccountPage/AppearancePage/: AppearancePage.vue  useUserPreferencesForm.ts
src/components/BackOfficePage/ActionsPage/: useActions.ts
src/components/BackOfficePage/InfoPage/: InfoPage.vue
src/components/BackOfficePage/SystemPage/: SystemForm.vue  useSystemForm.ts
src/components/BackOfficePage/WorkspacePage/: useWorkspacesQuery.ts
src/components/DebugPage/: BottomBar.vue  DebugPage.vue  Logs.vue  SideBar.vue  useScrollToBottom.ts
src/components/GalleryPage/: ActionCard.vue  DescriptionInfoCard.vue  GalleryPage.vue
src/components/TitleBar/: OptionsButtons.vue  SearchBar.vue  TitleBar.vue  WindowsMenu.vue
src/composables/: useUpdater.ts
src/composables/query/: useGroupsQuery.ts  useRolesQuery.ts  useUsersQuery.ts
src/composables/useCodeExec/: useCodeExec.ts
src/router/: index.ts  middleware.ts
src/services/jumper/: actions.ts  auth.ts  client.ts  index.ts  system.ts  update.ts  users.ts
src/stores/: debugWindowStore.ts  logsStore.ts  systemStore.ts  titleBarOptionsStore.ts
src/stores/actionExecStore/: useActionExec.ts
src/stores/authUser/: authUser.ts
(+21 files in other folders)
