[package]
name = "jumper"
version = "0.0.0"
description = "A Tauri App"
authors = ["antoine-libert"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jumper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri-plugin-shell = "2.3.3"
tauri-plugin-log = "2.7.1"
sysinfo = "0.37.2"
tempfile = "3.23.0"
tauri-plugin-fs = "2.4.4"
tauri-plugin-deep-link = "2"
url = "2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-store = "2.4.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
tauri-plugin-updater = "2"
